Fix the ticker's separator not showing up
I love fonts

--- a/src/display/ticker.scss
+++ b/src/display/ticker.scss
@@ -19,7 +19,7 @@ $item-padding: 0.7em;
 		margin: 0;
 		padding: 0;
 
-		font-family: "Roboto Mono";
+		font-family: "Roboto Mono", "STIX Two Math";
 		color: white;
 		font-size: 60px;
 		font-weight: 400;
